--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -9,8 +9,8 @@ crons = ["* * * * *"]
 
 [[d1_databases]]
 binding = "DB"
-database_name = "xugou_db"
-database_id = "32a2ca5f-3a77-4b08-965e-804612557880"
+database_name = "tanz"
+database_id = "0ebd2c8b-962c-4faf-9712-8f8c66d6df66"
 
 [version_metadata]
 binding = "CF_VERSION_METADATA"
