--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -9,8 +9,8 @@ crons = ["* * * * *"]
 
 [[d1_databases]]
 binding = "DB"
-database_name = "tanz"
-database_id = "0ebd2c8b-962c-4faf-9712-8f8c66d6df66"
+database_name = "xxxnz"
+database_id = "zzzzzz8b-962c-4faf-9712-8fxxxxxxx6"
 
 [version_metadata]
 binding = "CF_VERSION_METADATA"
